--- a/review.html
+++ b/review.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <a class="ziera" href="Index.html">ZiEra</a>
+        <a class="ziera" href="index.html">ZiEra</a>
         <nav>
             <a href="about.html">О компании</a>
             <a href="client.html">Клиенты</a>
@@ -119,4 +119,5 @@ cancelReviewBtn.addEventListener('click', () => {
 });
     </script>
 </body>
+
 </html>
