--- a/order.html
+++ b/order.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <a class="ziera" href="Index.html">ZiEra</a>
+    <a class="ziera" href="index.html">ZiEra</a>
     <nav>
       <a href="about.html">О компании</a>
       <a href="client.html">Клиенты</a>
@@ -95,4 +95,5 @@
   <div><br><br><br><p style="color: gray;">2024 © ZIEra</p></div>
 </footer>
 </body>
+
 </html>
