--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <a class="ziera" href="Index.html">ZiEra</a>
+        <a class="ziera" href="index.html">ZiEra</a>
         <nav>
             <a href="about.html">О компании</a>
             <a href="client.html">Клиенты</a>
@@ -72,3 +72,4 @@
 </body>
 
 </html>
+
