--- a/client.html
+++ b/client.html
@@ -10,7 +10,7 @@
 <body>
 
     <header><nav>
-        <span><a href="Index.html" >ZiERA</a></span>
+        <span><a href="index.html" >ZiERA</a></span>
     </nav>
         <nav style=" transform: translate(-5em, 0em)">
     
@@ -49,4 +49,5 @@
 </footer>
 
 </body>
+
 </html>
