--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <a class="ziera" href="Index.html">ZiEra</a>
+    <a class="ziera" href="index.html">ZiEra</a>
     <nav>
       <a href="about.html">О компании</a>
       <a href="client.html">Клиенты</a>
@@ -98,3 +98,4 @@
   </footer>
 </body>
 </html>
+
