--- a/client.html
+++ b/client.html
@@ -14,7 +14,7 @@
     </nav>
         <nav style=" transform: translate(-5em, 0em)">
     
-            <a href="onas.html">О компании</a>
+            <a href="about.html">О компании</a>
             <a href="client.html">Клиенты</a>
             <a href="review.html">Отзывы</a>
             <a href="services.html">Услуги</a>
@@ -51,3 +51,4 @@
 </body>
 
 </html>
+
